--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html,body{
 	margin: 0;
 	overflow-x: hidden;
-	font-family: monospace;
+	font-family: sans-serif;
 }
 
 header{
@@ -25,12 +25,31 @@ header{
 .white{
 	color: white;
 }
+
 .gray{
-	color: white;
-	opacity: 0.8;
+	color: rgba(255,255,255,0.7);
 }
 
+.text-gray{
+	color: #404040;
+}
 
+.border-red{
+	border-left: 2px solid red;
+}
+
+.border-blue{
+	border-left: 2px solid blue;
+}
+
+.border-yellow{
+	border-left: 2px solid yellow;
+}
+
+.border-footer{
+	padding-left: 10px;
+	border-left: 2px solid rgb(255,255,255,0.8);
+}
 /* --x-- Colors --x-- */
 
 /* ------- Global classes -------*/
@@ -41,7 +60,11 @@ header{
 	flex-wrap: wrap;
 }
 
-img{
+.center{
+	margin: 0 auto;
+}
+
+.home-news img{
 	filter: brightness(60%);
 }
 
@@ -50,9 +73,18 @@ svg{
 	height: auto;
 }
 
+h2{
+	color: #333333;
+}
+
 .img3x2{
 	width: 300px;
 	height: 200px;
+}
+
+.img4x3{
+	width: 400px;
+	height: 300px;
 }
 
 .img7x4{
@@ -169,6 +201,93 @@ table{
 	top: 30%;
 }
 
+#news-title{
+		margin: 10px 0px;
+}
+
 .title-pos-2{
 	top: 56%;
+}
+
+.news h2{
+	padding-left: 15px;
+	border-left: 4px solid red;
+}
+
+.news-td{
+	max-width: 300px;
+	height: auto;
+}
+
+.news-td h3{
+	margin-top: 5px;
+	margin-bottom: 10px;
+}
+
+.ad{
+	width:  400px;
+	background: #f2f2f2;
+}
+
+.tag{
+	padding: none;
+	padding-left: 10px;
+	font-weight: lighter;
+}
+
+.sports h2{
+	padding-left: 15px;
+	border-left: 4px solid yellow;
+}
+
+.nust h2{
+	padding-left: 15px;
+	border-left: 4px solid blue;
+}
+
+#reel{
+	width: 100%;
+	background-image: url("https://images.unsplash.com/photo-1598328064863-e1fddb36453d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80");
+	background-size: cover;
+}
+
+.reel-title{
+	padding-left: 20px;
+}
+
+#asia-news td{
+	padding-right: 20px;
+}
+
+footer{
+	background-color: #666666;
+}
+
+.footer-btn{
+	font-size: 14px;
+}
+
+.padding-top{
+	padding-top: 15px;
+}
+
+.padding-mid-top{
+	padding-top: 8px;
+}
+
+.padding-mid-btm{
+	padding-bottom: 8px;
+}
+
+.padding-btm{
+	padding-bottom: 15px;
+}
+
+.footer-btn th{
+	padding-right: 150px;
+	font-weight: lighter;
+}
+
+.footer-btn span{
+	padding-right: 10px;
 }
